fixed with of slider

--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
         <!--</ul>-->
     </div>
 </div>
-<script src="js/rotator.js"></script>
+<script src="js/slider.js"></script>
 <script>
     var slider = new Slider({
         elem: $('.slider-b'),
-        items: [
-            'hello',
-            'world'
+        imgSrc: [
+            'i/i1.jpg',
+            'i/i2.jpg',
+            'i/i3.jpg'
         ]
     });
 
