--- a/index.html
+++ b/index.html
@@ -8,20 +8,7 @@
     <script src="lib/jquery/dist/jquery.min.js"></script>
 </head>
 <body>
-<div class="slider-b">
-    <!--<a href="" class="btn" data-slider="btnPrev">prev</a>-->
-    <!--<a href="" class="btn" data-slider="btnNext">next</a>-->
-    <!--<div class="slider-wrap">-->
-        <!--<ul class="slider" data-slider="slider">-->
-            <!--<li class="slider-item current" data-slider="item"><img src="" alt="1"></li>-->
-            <!--<li class="slider-item" data-slider="item"><img src="" alt="2"></li>-->
-            <!--<li class="slider-item" data-slider="item"><img src="" alt="3"></li>-->
-            <!--<li class="slider-item" data-slider="item"><img src="" alt="4"></li>-->
-            <!--<li class="slider-item" data-slider="item"><img src="" alt="5"></li>-->
-            <!--<li class="slider-item" data-slider="item"><img src="" alt="6"></li>-->
-        <!--</ul>-->
-    </div>
-</div>
+<div class="slider-b"></div>
 <script src="js/slider.js"></script>
 <script>
     var slider = new Slider({
