finishe functions , have to fixed bugs with currentslide

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 <script>
     var slider = new Slider({
         elem: $('.slider-b'),
-        imgSrc: [
+        imgCollection: [
+            'i/i1.jpg',
+            'i/i2.jpg',
+            'i/i3.jpg',
             'i/i1.jpg',
             'i/i2.jpg',
             'i/i3.jpg'
