--- a/index.html
+++ b/index.html
@@ -8,22 +8,15 @@
     <script src="lib/jquery/dist/jquery.min.js"></script>
 </head>
 <body>
-<div class="slider-b"></div>
+
+<div class="slider-b" data-elem="slider" data-img="one" data-theme="1"></div>
+<div class="slider-b" data-elem="slider" data-img="two"></div>
+<script src="js/imgCollections.js"></script>
 <script src="js/slider.js"></script>
 <script>
-var slider = new Slider({
-elem: $('.slider-b'),
-imgCollection: [
-'i/i1.jpg',
-'i/i2.jpg',
-'i/i3.jpg',
-    'i/i1.jpg',
-    'i/i2.jpg',
-    'i/i3.jpg'
-]
-});
+var slider = new Slider();
 
-slider.getElem();
+slider.render();
 </script>
 </body>
 </html>
