--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<div class="slider-b" data-elem="slider" data-img="one" data-theme="1"></div>
+<div class="slider-b" data-elem="slider" data-img="one" data-view="2"></div>
 <div class="slider-b" data-elem="slider" data-img="two"></div>
 <script src="js/imgCollections.js"></script>
 <script src="js/slider.js"></script>
